[package]
name = "ratingupdate-tier-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
regex = "1.9.6"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.17.1"
